# Renesas_SmartWatch

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: README_8md.html  annotated.html  annotated_dup.js  app__config_8h.html  app__config_8h.js  app__config_8h__dep__incl.map  app__config_8h__dep__incl.md5  app__config_8h__incl.map  app__config_8h__incl.md5  app__config_8h_source.html  app__controller_8c.html  app__controller_8c.js  app__controller_8c__incl.map  app__controller_8c__incl.md5  app__controller_8c_source.html  app__controller_8h.html  app__controller_8h.js  app__controller_8h__dep__incl.map  app__controller_8h__dep__incl.md5  app__controller_8h__incl.map  app__controller_8h__incl.md5  app__controller_8h_source.html  app__interrupts_8c.html  app__interrupts_8c.js  app__interrupts_8c__incl.map  app__interrupts_8c__incl.md5  app__interrupts_8c_source.html  app__interrupts_8h.html  app__interrupts_8h.js  app__interrupts_8h__dep__incl.map  app__interrupts_8h__dep__incl.md5  app__interrupts_8h__incl.map  app__interrupts_8h__incl.md5  app__interrupts_8h_source.html  app__types_8h.html  app__types_8h.js  app__types_8h__dep__incl.map  app__types_8h__dep__incl.md5  app__types_8h__incl.map  app__types_8h__incl.md5  (+136 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  (+32 more)
include/: app_config.h  app_controller.h  app_interrupts.h  app_types.h  bletiny.h  iic0_bus.h  ips2_display.h  project_platform.h  ra4m2_baremetal.h  rtc14.h  temphum27.h
src/: app_controller.c  app_interrupts.c  bletiny.c  iic0_bus.c  ips2_display.c  main.c  rtc14.c  temphum27.c
